--- a/Front/src/app/morpion/morpion.component.html
+++ b/Front/src/app/morpion/morpion.component.html
@@ -1,12 +1,9 @@
 <p>morpion works!</p>
 
 <div id = "morpion" class = "container">
-
-    <table class = "table">
-
-        <tr><td class = "border">&nbsp;</td><td class = "border">&nbsp;</td><td class = "border">&nbsp;</td></tr>
-        <tr><td class = "border">&nbsp;</td><td class = "border">&nbsp;</td><td class = "border">&nbsp;</td></tr>
-        <tr><td class = "border">&nbsp;</td><td class = "border">&nbsp;</td><td class = "border">&nbsp;</td></tr>
-    </table>
-    
+    <div *ngFor="let line of morpion.grid; let i = index" class = "row">
+        <div *ngFor="let case of line; let j = index" (click)="clickCaseHandler(i,j)" class = "col case d-flex justify-content-center">
+            {{case}}
+        </div>
+    </div>
 </div>
