--- a/Front/src/app/morpion/morpion.component.html
+++ b/Front/src/app/morpion/morpion.component.html
@@ -1,12 +1,6 @@
-<p>morpion works!</p>
+<p>Your turn {{player.name}}</p>
+<p>You are playing {{player.side}} against </p>
 
-<div *ngFor="let line of morpion.grid; let i = index" class = "row">
-    <div *ngFor="let case of line; let j = index" (click)="clickCaseHandler(i,j)" class = "col case d-flex justify-content-center">
-        {{case}}
-    </div>
-</div>
-
-{{morpion$ | async}}
 
 <div id = "morpion" class = "container" *ngIf="(morpion$ | async) as morpion">
     <div *ngFor="let line of morpion; let i = index" class = "row">
