--- a/Front/src/app/player-registration/player-registration.component.html
+++ b/Front/src/app/player-registration/player-registration.component.html
@@ -2,8 +2,8 @@
     <div class = "form">
         <div class = "col"><label class = "form-label"> Pseudo </label> </div> <div class = "col"><input type = "text" class = "form-label" [(ngModel)]="player.name"></div>
         <div class = "col-group group-btn"  *ngFor="let side of sides">
-            <input type = "radio" [(ngModel)] = "player.side" [value] = side>
+            <input type = "radio" [(ngModel)] = "player.side" [value] = side>{{side}}
         </div>
-        <button type = "submit" class = "btn btn-primary btn-lg btn-block">Jouer</button>
+        <button type = "button" (click)="clickPlayHandler()" class = "btn btn-primary btn-lg btn-block">Jouer</button>
     </div>
 </div>
