--- a/Front/src/app/morpion/morpion.component.html
+++ b/Front/src/app/morpion/morpion.component.html
@@ -7,7 +7,7 @@
 
 <div id = "morpion" class = "container" *ngIf="(morpion$ | async) as morpion">
     <div *ngFor="let line of morpion; let i = index" class = "row">
-        <div *ngFor="let case of line; let j = index" (click)="clickCaseHandler(i,j)" class = "col case d-flex justify-content-center">
+        <div *ngFor="let case of line; let j = index" (click)="clickCaseHandler(i,j)" class = "col case d-flex justify-content-center border border-1 border-dark d-flex justify-content-center align-item-center">
             {{case}}
         </div>
     </div>
